--- a/conf/case_path.ini
+++ b/conf/case_path.ini
@@ -5,3 +5,7 @@ unit_management=E:\Auto-interface\data/unit_management\unit_management_case.xlsx
 
 [INFRASTRUCTUREUUID]
 infrastructure_uuid=E:\Auto-interface\data/infrastructure\infrastructure_uuid.xlsx
+
+
+[INFRASTRUCTURE]
+infrastructure=E:\Auto-interface\data\infrastructure\infrastructure_case.xlsx
