1.已完成进入调试阶段

--- a/conf/case_path.ini
+++ b/conf/case_path.ini
@@ -5,3 +5,6 @@ unit_management=E:\Auto-interface\data/unit_management\unit_management_case.xlsx
 
 [INFRASTRUCTUREUUID]
 infrastructure_uuid=E:\Auto-interface\data/infrastructure\infrastructure_uuid.xlsx
+
+[UNITMANAGEMENTUUID]
+unit_management_uuid=E:\Auto-interface\data\unit_management\unit_management_uuid.xlsx
